# kid-climber

./: .gitignore  BUILD.md  CONTRIBUTING.md  GITHUB.md  LICENSE  README.md  build-release.bat  build-web.bat  build-windows.bat  build.bat  package-lock.json  package.json  release.bat  start.bat  stop.bat
.github/workflows/: build.yml
backend/: go.mod  go.sum
backend/cmd/server/: main.go
backend/config/: config.go
backend/internal/database/: database.go
backend/internal/models/: models.go
doc/: 01-项目启动和架构设计.md  02-项目初始化和基础搭建.md  03-核心功能开发.md  04-测试和发布准备.md  05-项目总结.md  06-开发迭代记录.md  07-项目总结.md  08-升级文档.md  09-最终项目总结.md  10-商业化开发完成总结.md  README.md
frontend/: generate_icons.py  package-lock.json  package.json
frontend/src/: App.tsx  index.css  theme.css
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: main.rs
frontend/stores/: componentLibrary.ts  designStore.ts  interactionStore.ts
frontend/systems/: AutoCompleteSystem.ts  AutoConnectSystem.ts  ConnectionSystem.ts  DrawingSystem.ts  ExportManager.ts  MaterialCostSystem.ts  MaterialListManager.ts  SmartPositionPredictor.ts  SmartSnapSystem.ts  SnapConnectionSystem.ts  StructuralAnalysisSystem.ts  ToolSystems.ts  UndoRedoManager.ts  index.ts
frontend/types/: index.ts
frontend/utils/: apiUtils.ts  calculationUtils.ts  connectionUtils.ts  errorHandlingUtils.ts  fileUtils.ts  helpUtils.ts  interactionUtils.ts  materialUtils.ts  modelUtils.ts  performanceUtils.ts  searchUtils.ts  shortcutUtils.ts  smoothInteractionUtils.ts  templateUtils.ts  themeUtils.tsx  thumbnailUtils.ts
(+29 files in other folders)
