[package]
name = "kid-climber"
version = "1.0.0"
description = "攀爬架结构设计软件"
authors = ["Kid Climber Team"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = ["shell-open", "fs-all", "path-all", "window-all", "dialog-all", "http-all", "notification-all", "global-shortcut-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
